--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ a {
     color: #595959;
     text-decoration: none; }
 
-* {
+*, *:before, *:after {
   box-sizing: border-box; }
 
 .wrapper, #mainBody, .mainnav {
@@ -219,25 +219,3 @@ a {
 /* TITLE */
 /* PAGE */
 /* FOOTER */
-@-moz-keyframes slide-down {
-  0% {
-    opacity: 1; }
-  90% {
-    opacity: 0; } }
-@-webkit-keyframes slide-down {
-  0% {
-    opacity: 1; }
-  90% {
-    opacity: 0; } }
-@keyframes slide-down {
-  0% {
-    opacity: 1; }
-  90% {
-    opacity: 0; } }
-.element {
-  width: 100px;
-  height: 100px;
-  background: black;
-  -moz-animation: "slide-down 5s 3";
-  -webkit-animation: "slide-down 5s 3";
-  animation: "slide-down 5s 3"; }
